[project]
name = "auditory-eeg-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brain-pipe>=0.0.3",
    "brian2>=2.9.0",
    "brian2hears>=0.9.2",
    "librosa>=0.11.0",
    "mne>=1.10.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pybids>=0.21.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
exclude = ["download_code*", "preprocessing_code*", "technical_validation*"]
